delete function for user
